package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary", "sass_library")
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
)

ng_module(
    name = "node-icon",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@ajf/core/node-icon",
    deps = [
        "//src/core/forms",
        "@npm//@angular/core",
    ],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":node-icon",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [
        ":unit_test_sources",
    ],
)

markdown_to_html(
  name = "overview",
  srcs = ["node-icon.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
